@@ -88,6 +88,7 @@ typedef enum
 	ORA_TYPE_LONG,
 	ORA_TYPE_LONGRAW,
 	ORA_TYPE_GEOMETRY,
+	ORA_TYPE_XMLTYPE,
 	ORA_TYPE_OTHER
 } oraType;
 
